--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -627,7 +627,7 @@
                             
                                 
                                     <div class="border optionbox mb-2 py-1">
-                                        <div class="btn-group btn-group-toggle btn-toggle-disparities" data-toggle="buttons">
+                                        <div class="btn-group btn-group-toggle btn-toggle-disparities" data-toggle="buttons" style="display: inline;">
     
                                             <label class="btn btn-sm btn-block btn-outline-primary dropdown-item my-0" id="show-disparities">
                                                 <input type="radio" name="options" id="disparities-btn" autocomplete="off"> Disparities
