changing dropdown-item button styling

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -630,9 +630,9 @@
                                         
                                         <div class="btn-toggle-disparities">
     
-                                            <button class="dropdown-item pl-2" id="show-disparities"> Disparities
+                                            <button class="btn btn-primary dropdown-item pl-2" id="show-disparities"> Disparities
                                             </button>
-                                            <button class="dropdown-item pl-2" id="show-links"> Correlates
+                                            <button class="btn btn-primary dropdown-item pl-2" id="show-links"> Correlates
                                             </button>
     
                                         </div>
