--- a/themes/dohmh/layouts/data-explorer/section.html
+++ b/themes/dohmh/layouts/data-explorer/section.html
@@ -43,18 +43,18 @@
             <div class="col-md-4 col-sm-12 pl-md-3 mb-5">
 
                 <!-- Recently updated data -->
-                <h3 class="h4 mb-1 pb-1">Recently Updated Datasets</h3>
+                <h3 class="h4 mb-1 pb-1">Recently updated datasets</h3>
                 {{ range .Site.Data.recently_updated_data.featured}}
                 <div class=" mb-1 pt-1 border-top font-weight-bold">
                     <a href="{{ relURL .link }}" class="px-2 d-inline-block">{{ .copy }}</a>
                 </div>
                 {{ end }}
 
-                <h3 class="h4 mb-1 pb-1 mt-5">Browse Datasets Directly</h3>
+                <h3 class="h4 mb-1 pb-1 mt-5">Browse datasets</h3>
 
-                <p class="mb-1 pt-1 border-top px-2"><a class="font-weight-bold" href="#">Browse Dataset Index</a> - Search by term, see available years and geographies, and filter by data source.</p>
+                <p class="mb-1 pt-1 border-top px-2"><a class="font-weight-bold" href="#">Dataset index</a> - Search by term, see available years and geographies, and filter by data source.</p>
 
-                <p class="mb-1 pt-1 border-top px-2"><a class="font-weight-bold" href="#">Browse a Catalog of Our Indicators</a> - Search by term, get metadata and download links.</p>
+                <p class="mb-1 pt-1 border-top px-2"><a class="font-weight-bold" href="#">Catalog of indicators</a> - Search by term, get metadata and download links.</p>
 
             </div>
 
