revise de-chooser-accordion call from DE single

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -752,7 +752,7 @@
                     </button>
                 </div>
                 <div class="modal-body p-0 ">
-                    {{ partial "de-chooser-accordion.html" (dict "layout" "single" "context" . ) }}
+                    {{ partial "de-chooser-accordion.html" (dict "layout" "double" "context" . ) }}
                 </div>
             </div>
         </div>
