--- a/themes/dohmh/layouts/index.html
+++ b/themes/dohmh/layouts/index.html
@@ -38,7 +38,11 @@
           <div class="col-md-6 px-20">
             <div class="card content-card">
               <div class="card-content primary">
-                <div class="position-relative" style='height: 330px; width: 100%; background-image: url({{ relURL ( urls.JoinPath "images" .Params.featured_image ) }}); background-position: center; background-size: cover;'>
+
+                {{ $src := resources.GetMatch ( path.Join "**" .Params.featured_image )}}
+                {{ $image := $src.Resize "x1600 jpg q75"}}
+                <div class="position-relative" style='height: 330px; width: 100%; background-image: url({{ relURL $image.RelPermalink }}); background-position: center; background-size: cover;'>
+
                   <div class="overlay-trends">
                     <!-- Can use overlay-trends, overlay-map or overlay-topics -->
                   </div>
@@ -142,7 +146,9 @@
             <div class="card-content data-stories mb-4">
               <a class="position-relative" href={{ relURL "data-stories" }}>
                 <div class="tab-data-stories h-100 w-100 position-absolute"></div>
-                <img class="card-img-top" src={{ relURL "images/image_tab_data_stories.jpg" }}>
+                {{ $src := resources.GetMatch ( path.Join "**/image_tab_data_stories.jpg" )}}
+                {{ $image := $src.Resize "x1200 jpg q75"}}
+                <img class="card-img-top" src="{{ relURL $image.RelPermalink }}">
               </a>
               <div class="card-body">
                 <h3 class="card-title">Data stories</h3>
@@ -160,7 +166,9 @@
             <div class="card-content data-features mb-4">
               <a class="position-relative" href={{ relURL "data-features" }}>
                 <div class="tab-data-features h-100 w-100 position-absolute"></div>
-                <img class="card-img-top" src={{ relURL "images/image_key_topics.jpg" }}>
+                {{ $src := resources.GetMatch ( path.Join "**/image_tab_data_features.jpg" )}}
+                {{ $image := $src.Resize "x1200 jpg q75"}}
+                <img class="card-img-top" src="{{ relURL $image.RelPermalink }}">
               </a>
               <div class="card-body">
                 <h3 class="card-title">Data Features</h3>
@@ -178,7 +186,9 @@
             <div class="card-content n-reports mb-4">
               <a class="position-relative" href={{ relURL "neighborhood-reports" }}>
                 <div class="tab-neighborhood-reports h-100 w-100 position-absolute"></div>
-                <img class="card-img-top" src={{ relURL "images/image_tab_neighborhood_reports.jpg" }}>
+                {{ $src := resources.GetMatch ( path.Join "**/image_tab_neighborhood_reports.jpg" )}}
+                {{ $image := $src.Resize "x1200 jpg q75"}}
+                <img class="card-img-top" src="{{ relURL $image.RelPermalink }}">
               </a>
               <div class="card-body">
                 <h3 class="card-title">Neighborhood Reports</h3>
@@ -198,7 +208,9 @@
             <div class="card-content data-explorer mb-4">
               <a class="position-relative" href={{ relURL "data-explorer" }}>
                 <div class="tab-data-explorer h-100 w-100 position-absolute"></div>
-                <img class="card-img-top" src={{ relURL "images/image_tab_key_topics.jpg" }}>
+                {{ $src := resources.GetMatch ( path.Join "**/image_tab_data_explorer.jpg" )}}
+                {{ $image := $src.Resize "x1200 jpg q75"}}
+                <img class="card-img-top" src="{{ relURL $image.RelPermalink }}">
               </a>
               <div class="card-body">
                 <h3 class="card-title">Data Explorer</h3>
