--- a/themes/dohmh/layouts/partials/head.html
+++ b/themes/dohmh/layouts/partials/head.html
@@ -89,7 +89,7 @@
 <!-- favicon -->
 <!-- https://www.iconfinder.com/icons/7618350/heatmap_business_analytics_statistics_icon -->
 <!-- https://lucianojung.de/ -->
-<link rel="icon" href={{ relURL "7618350_heatmap_business_analytics_statistics_icon-gpr.ico" }}>
+<link rel="icon" href={{ relURL "7618350_heatmap_business_analytics_statistics_icon-gpr.ico" }} type="image/x-icon">
 
 {{- /*  Font Awesome  */}}
 
