--- a/themes/dohmh/layouts/data-features/healthy-homes.html
+++ b/themes/dohmh/layouts/data-features/healthy-homes.html
@@ -26,7 +26,7 @@
 
 <div class="bucket border px-4 my-2">
     <div>
-        <img tabindex="0" class="superimpose" id="backgroundImage" alt="" src="background.svg" />
+        <img tabindex="0" class="superimpose" id="backgroundImage" alt="" src="newbackgroundtest4.svg" />
         <img tabindex="0" class="superimpose" id="crackinwallOverlay" alt="" src="crackinwall.svg" />
         <img tabindex="0" class="superimpose" id="peelingpaintOverlay" alt="" src="peelingpaint.svg" />
         <img tabindex="0" class="superimpose" id="bowlOverlay" alt="" src="openfood.svg" style="position: absolute;top:-3%;left: 15%;" />
@@ -34,7 +34,7 @@
         <img tabindex="0" class="superimpose" id="smokedetector_1Overlay" alt="" src="smokedetector_1.svg" style="position:absolute;top: 3%;left: 25%;" />
         <img tabindex="0" class="superimpose" id="pestdropOverlay" alt="" src="chewdrop.svg" style="position:absolute;top: 4.5%;left: -1%;" />
         <img tabindex="0" class="superimpose" id="bottleOverlay" alt="" src="bottle.svg" style="position:absolute;top: 6%;left: -3%;" />
-        <img tabindex="0" class="superimpose" id="ceramicwareOverlay" alt="" src="ceramicware.svg" style="position:absolute;top: 5%;left: -3%;" />
+        <img tabindex="0" class="superimpose" id="ceramicwareOverlay" alt="" src="ceramicbowlA.svg" style="position:absolute;top: 5%;left: -3%;" />
         <img tabindex="0" class="superimpose" id="cleanersOverlay" alt="" src="cleaners.svg" style="position:absolute;top: 4%;left: -0.5%;" />
         <img tabindex="0" class="superimpose" id="spillOverlay" alt="" src="spill.svg" style="position: absolute; top: 5%;left: -0.5%;"/> 
         <img tabindex="0" class="superimpose" id="leakingpipeOverlay" alt="" src="leakingpipe.svg" style="position: absolute; top: 5%;left: -0.5%;"/>
