improve keyboard access

--- a/themes/dohmh/layouts/data-features/healthy-homes.html
+++ b/themes/dohmh/layouts/data-features/healthy-homes.html
@@ -41,10 +41,10 @@
         <img tabindex="0" class="superimpose" id="regularpipeOverlay" alt="" src="regularpipe.svg" style="position: absolute; top: 5%;left: -0.5%;"/>
 
     <div class="clickables">
-      <a id="crackinwallDot" onclick="crackinwall()" aria-label="..." style="position:absolute;top: 40%;left: 30%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#crackinwallModal" ></a>
-      <a id="peelingpaintDot" onclick="peelingpaint()" aria-label="..." style="position:absolute;top: 55%;left: 3%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#peelingpaintModal" ></a>
-      <a id="bowlDot" onclick="bowl()" aria-label="..." style="position:absolute;top: 74%;left: 18%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#bowlModal" ></a>
-      <a id="bowl2Dot" onclick="bowl()" aria-label="..." style="position:absolute;top: 74%;left: 80%;" tabindex="0" class="dot-lg dot-border" data-toggle="modal" data-target="#bowlModal" ></a>
+      <a id="crackinwallDot" href="#" onclick="crackinwall()" aria-label="..." style="position:absolute;top: 40%;left: 30%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#crackinwallModal" role="button"></a>
+      <a id="peelingpaintDot"  onclick="peelingpaint()" aria-label="..." style="position:absolute;top: 55%;left: 3%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#peelingpaintModal" ></a>
+      <a id="bowlDot"  onclick="bowl()" aria-label="..." style="position:absolute;top: 74%;left: 18%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#bowlModal" ></a>
+      <a id="bowl2Dot"  onclick="bowl()" aria-label="..." style="position:absolute;top: 74%;left: 80%;" tabindex="0" class="dot-lg dot-border" data-toggle="modal" data-target="#bowlModal" ></a>
 
       <a id="bottleDot" onclick="bottle()" aria-label="..." style="position:absolute;top: 46%;left: 13%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#bottleModal" ></a>
       <a id="pestdropDot" onclick="pestdrop()" aria-label="..." style="position:absolute;top: 67%;left: 5%;" tabindex="0" class="dot-lg dot-border" data-toggle="modal" data-target="#pestdropModal" ></a>
