--- a/themes/dohmh/layouts/data-features/healthy-homes.html
+++ b/themes/dohmh/layouts/data-features/healthy-homes.html
@@ -41,17 +41,17 @@
         <img tabindex="-1" class="superimpose" id="regularpipeOverlay" alt="" src="regularpipe.svg" style="position: absolute; top: 5%;left: -0.5%;"/>
 
     <div class="clickables">
-      <a id="crackinwallDot" href="#" onclick="crackinwall()" aria-label="..." style="position:absolute;top: 40%;left: 30%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#crackinwallModal" role="button"></a>
-      <a id="peelingpaintDot"  onclick="peelingpaint()" aria-label="..." style="position:absolute;top: 55%;left: 3%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#peelingpaintModal" ></a>
-      <a id="bowlDot"  onclick="bowl()" aria-label="..." style="position:absolute;top: 74%;left: 18%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#bowlModal" ></a>
-      <a id="bowl2Dot"  onclick="bowl()" aria-label="..." style="position:absolute;top: 74%;left: 80%;" tabindex="0" class="dot-lg dot-border" data-toggle="modal" data-target="#bowlModal" ></a>
-      <a id="bottleDot" onclick="bottle()" aria-label="..." style="position:absolute;top: 46%;left: 13%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#bottleModal" ></a>
-      <a id="pestdropDot" onclick="pestdrop()" aria-label="..." style="position:absolute;top: 67%;left: 5%;" tabindex="0" class="dot-lg dot-border" data-toggle="modal" data-target="#pestdropModal" ></a>
-      <a id="ceramicwareDot" onclick="ceramicware()" aria-label="..." style="position:absolute;top: 44%;left: 51%;" tabindex="0" class="dot-lg dot-border" data-toggle="modal" data-target="#ceramicwareModal" ></a>
-      <a id="moldDot" onclick="mold()" aria-label="..." style="position:absolute;top: 40%;left: 39.5%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#moldModal" ></a>
-      <a id="smokedetector_1Dot" onclick="smokedetector_1()" aria-label="..." style="position:absolute;top: 33%;left: 86%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#smokedetector_1Modal" ></a>
-      <a id="spillDot" onclick="spill()" aria-label="..." style="position:absolute;top: 65%;left: 28%; size: 200%" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#spillModal" ></a>
-      <a id="cleanersDot" onclick="cleaners()" aria-label="..." style="position:absolute;top: 60%;left: 24%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#cleanersModal" ></a>
+      <a id="crackinwallDot" href="#" onclick="crackinwall()" aria-label="A crack in the wall" style="position:absolute;top: 40%;left: 30%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#crackinwallModal" role="button"></a>
+      <a id="peelingpaintDot" href="#" onclick="peelingpaint()" aria-label="Peeling paint on a wall" style="position:absolute;top: 55%;left: 3%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#peelingpaintModal" role="button"></a>
+      <a id="bowlDot" href="#" onclick="bowl()" aria-label="A pet bowl with food inside" style="position:absolute;top: 74%;left: 18%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#bowlModal" role="button"></a>
+      <a id="bowl2Dot" href="#"  onclick="bowl()" aria-label="A pet bowl with food inside" style="position:absolute;top: 74%;left: 80%;" tabindex="0" class="dot-lg dot-border" data-toggle="modal" data-target="#bowlModal" role="button"></a>
+      <a id="bottleDot" href="#" onclick="bottle()" aria-label="A baby bottle" style="position:absolute;top: 46%;left: 13%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#bottleModal" role="button"></a>
+      <a id="pestdropDot" href="#" onclick="pestdrop()" aria-label="Pest droppings from a pest like a mouse" style="position:absolute;top: 67%;left: 5%;" tabindex="0" class="dot-lg dot-border" data-toggle="modal" data-target="#pestdropModal" role="button"></a>
+      <a id="ceramicwareDot" href="#" onclick="ceramicware()" aria-label="A glazed ceramic bowl" style="position:absolute;top: 44%;left: 51%;" tabindex="0" class="dot-lg dot-border" data-toggle="modal" data-target="#ceramicwareModal" role="button"></a>
+      <a id="moldDot" href="#" onclick="mold()" aria-label="Mold stains on a wall" style="position:absolute;top: 40%;left: 39.5%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#moldModal" role="button"></a>
+      <a id="smokedetector_1Dot" href="#" onclick="smokedetector_1()" aria-label="A smoke detector" style="position:absolute;top: 33%;left: 86%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#smokedetector_1Modal" role="button"></a>
+      <a id="spillDot" href="#"onclick="spill()" aria-label="A puddle of water on the floor" style="position:absolute;top: 65%;left: 28%; size: 200%" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#spillModal" role="button"></a>
+      <a id="cleanersDot" href="#" onclick="cleaners()" aria-label="Household cleaners in an open cabinet" style="position:absolute;top: 60%;left: 24%;" tabindex="0" class="dot dot-border" data-toggle="modal" data-target="#cleanersModal" role="button"></a>
 
         </div>
     </div>
