add PUMA one more place

--- a/themes/dohmh/layouts/data-explorer/data-index.html
+++ b/themes/dohmh/layouts/data-explorer/data-index.html
@@ -391,6 +391,12 @@
                     case 'CDTA2020':
                         return 'CDTA';
 
+                    case 'PUMA2010':
+                        return 'PUMA';
+
+                    case 'PUMA2020':
+                        return 'PUMA';
+
                     case 'NTA2010':
                         return 'NTA';
 
