--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -240,7 +240,7 @@
           </div>
 
         <div class="collapse p-2 border mb-2 fs-sm" id="toggle-target-1">
-          <p> Stories featured in the South Bronx and northern Manhattan were collected in partnership with South Bronx Unite, WE ACT for Environmental Justice, and CBOs 9-12. These areas were selected because they are vulnerable to the health risks of extreme heat due to economic, racial, and social inequities.</p>
+          <p> Stories featured in the South Bronx and northern Manhattan were collected in partnership with South Bronx Unite, WE ACT for Environmental Justice, and CBOs 9-12. Stories featured in South Queens were collected in partnership with South Queen's Women's March. These areas were selected because they are vulnerable to the health risks of extreme heat due to economic, racial, and social inequities.</p>
           <p><strong> Hyperlocal data vs citywide data</strong></p>
           <p> This heat story map features data collected across New York City and hosted on the Environment and Health Data Portal about air quality, air conditioning access, neighborhood poverty, and more. You can explore each dataset more thoroughly through our Data Explorer. The map also features a limited amount of data collected in northern Manhattan and the South Bronx because of the parameters of the original study. These hyperlocal data layers were generated through the community science approach described, and provide valuable insights into block-level differences at different times of day. </p>
             <p> Using a community science approach, the data collection process was
@@ -308,6 +308,7 @@
                 <li><a href="https://www.capastrategies.com/" target="_blank">CAPA Strategies</li>
                 <li><a href="https://www.southbronxunite.org/" target="_blank">South Bronx Unite</a></li>
                 <li><a href="https://www.weact.org/" target="_blank">WE ACT for Environmental Justice</a></li>
+                <li><a><a href="https://www.southqueenswomensmarch.org/">South Queen's Women's March</a></li>
                 <li>Community Boards 9-12</li>
           </ul>
         </div>
