--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -225,7 +225,7 @@
       <div class="row">
         <div class="col-md-8 col-sm-12">
           <h4 class="h5">Submit your heat story</h4>
-          <p>How does heat affects health, in your home, your neighborhood, and your life? </p>
+          <p>How does heat affect you in your home, your neighborhood, and your life? </p>
           <p><a href='https://docs.google.com/forms/d/e/1FAIpQLSdwGh2hb4LeLsQxH-w9awMAF2qc_UgOsD_bBYhRVa3ECxM8Bg/viewform'>Submit a story here</a> - tell us how heat affects your life. You can even upload pictures of your home, neighborhood, park, or anything else that helps illustrate your story. You can add your name, or remain anonymous - it's up to you.</p>
           <p>We'll review submissions and add some of them to this map. We'll only include whatever details you choose to share with us.</p>
         </div>
