--- a/themes/dohmh/layouts/partials/related-footer-2.html
+++ b/themes/dohmh/layouts/partials/related-footer-2.html
@@ -9,22 +9,33 @@
                     <hr class="my-2">
                   </div>
                   <div class="fs-lg">
+                    {{ if .Params.related }}
+                      {{ range .Params.related }}
+                        <a class="text-black" href="{{ .url }}">
+                          <span class='text-primary data-stories mr-2'><i class='fas fa-passport' aria-hidden='true'></i></span>{{ .title }}
+                        </a>
+                        <hr class="my-2">
+                      {{ end }}
+
+                    {{ else }}
                     {{- partial "mod-related-main" (dict "section" "data-stories" "layout" "singlelisticon" "content" . ) -}}
+                    {{ end }}
                   </div>
                 </div>
               </div>
               <!-- .col for city -->
-
+              {{ if .Params.categories }}
               <div class="col-lg-4 pl-lg-3">
                 <div class="related-border">
                   <h4 class="h3 mt-2">You might also be intersted in</h4>
                   <hr class="my-2">
                 </div>
                   <div>
-                    {{- partial "mod-related-small" (dict "section" "data-explorer" "layout" "singlelist" "content" . ) -}}
+                    {{- partial "mod-related-small" (dict "section" "key-topics" "layout" "singlelist" "content" . ) -}}
                 </div>
                 </div>
               </div>
+              {{ end }}
               <!-- .col for data -->
         </div>
     </div>
