--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -196,14 +196,14 @@
   <div class="row">
     <div class="col-md-4">
       <div id="baseLayerButtons">
-        <h4 class="home-label">Study Area</h4>
+        <h4 class="home-label">Local community science data</h4>
         <div id="buttonHolderStudyArea" style="display: inline-block"></div>
       </div>
     </div>
 
     <div class="col-md-6">
       <div id="baseLayerButtons">
-        <h4 class="home-label">Choose data</h4>
+        <h4 class="home-label">Citywide data</h4>
         <div id="buttonHolderBase" style="display: inline-block"></div>
       </div>
     </div>
