--- a/themes/dohmh/layouts/key-topics/single.html
+++ b/themes/dohmh/layouts/key-topics/single.html
@@ -26,12 +26,15 @@
         </div>
 
         <div class="row mt-1 py-4 mb-4 border-bottom">
-            <div class="col-md-12 col-lg-8 pr-xl-4">
-                <div class="key-topics mb-3">
+            <div class="col-12 mb-3">
+                <div class="key-topics">
                     <h1 class="h2" data-pagefind-weight="10.0">
                         <i class="fas fa-star mr-1" aria-hidden="true"></i>{{ .Title }}
                     </h1>
                 </div>
+            </div>
+
+            <div class="col-md-12 col-lg-8 pr-xl-4">
                 <img src="{{ $image.RelPermalink }}" class="mb-3" alt="">
                 {{- .Content -}}
             </div>
