community science link

--- a/themes/dohmh/layouts/data-features/heatstory.html
+++ b/themes/dohmh/layouts/data-features/heatstory.html
@@ -196,7 +196,7 @@
   <div class="row">
     <div class="col-md-4">
       <div id="baseLayerButtons">
-        <h4 class="home-label">Local community science data</h4>
+        <h4 class="home-label">Community science data<a href="#communityScience"><i class="fas fa-info-circle ml-1"></i></a></h4>
         <div id="buttonHolderStudyArea" style="display: inline-block"></div>
       </div>
     </div>
